Fixed pom errors